# python-basic-homeworks

./: README.md  requirements.txt
homework_01/: main.py
homework_02/: base.py  car.py  engine.py  exceptions.py  plane.py
homework_03/: Dockerfile  README.md  app.py  pyproject.toml
homework_04/: jsonplaceholder_requests.py  main.py  models.py  pyproject.toml  requirements.txt
homework_05/: app.py
homework_05/templates/: about.html  base.html
