[tool.poetry]
name = "homework-03"
version = "0.1.0"
description = ""
authors = ["whodobbi <dasha.khudobina@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
uvicorn = "^0.27.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
