[tool.poetry]
name = "homework_04"
version = "0.1.0"
description = ""
authors = ["whodobbi <dasha.khudobina@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.3"
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.27"}
asyncpg = "^0.29.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
